2023-02-20  Markus Gans  <guru.mail@muenster.de>
	* Fixes display problems with half-covered full-width characters 
	  with color overlay

2023-02-17  Markus Gans  <guru.mail@muenster.de>
	* Fixes the conflict between reducing changes and hardware scrolling

2023-02-14  Markus Gans  <guru.mail@muenster.de>
	* Fixes the problem of insufficient space on resizing in FScrollView 
	  by scrolling backwards

2023-02-08  Markus Gans  <guru.mail@muenster.de>
	* Better detection of the keypad center key

2023-02-07  Markus Gans  <guru.mail@muenster.de>
	* Keys are now identified via a hash map to speed up escape sequence 
	  searches

2023-02-04  Markus Gans  <guru.mail@muenster.de>
	* Adapted color reset for st - simple terminal
	* Fixes incorrect key detection caused by duplicate key sequences

2023-01-29  Markus Gans  <guru.mail@muenster.de>
	* Fixed invalid iterator on post-inserting an item in FListView
	* The application will now be notified when the focus changes in 
	  the terminal window, through the new onTermFocusIn() and 
	  onTermFocusOut() event methods
	* New methods removeColumn() and removeAllColumns() for 
	  FListView to remove columns

2023-01-22  Markus Gans  <guru.mail@muenster.de>
	* Fix focus-in and focus-out errors FComboBox and FSpinBox

2023-01-15  Markus Gans  <guru.mail@muenster.de>
	* Speed-up of the update routine for virtual terminal

2023-01-07  Markus Gans  <guru.mail@muenster.de>
	* Accelerated copying of lines with transparent characters

2023-01-05  Markus Gans  <guru.mail@muenster.de>
	* Bugfix for broken scrollbar behavior in FScrollView widget
	* Bugfix for infinite loop on input queue processing on exit

2023-01-04  Markus Gans  <guru.mail@muenster.de>
	* FObject now supports reverse iterators
	* Small improvement of the display speed

2023-01-03  Markus Gans  <guru.mail@muenster.de>
	* The way how a widget gets the focus has been changed. It is now 
	  a single step that includes sending focus events
